# ai

./: .gitignore  README.md
main/: Dockerfile  README.md  docker-compose.yml  main.py  main2.py  main3.py  pyproject.toml  workflow.py
main/agent/: explain_theory_agent.py  external_search_agent.py  problem_generation_agent.py  problem_solving_agent.py  quality_evaluation_agent.py  response_generation_agent.py  task_manager.py
main/chapters_md/: Chapter 01 Functions and Models.md  Chapter 02 Limits and Derivatives.md  Chapter 03 Differentiation Rules.md  Chapter 04 Applications of Differentiation.md  Chapter 05 Integrals.md  Chapter 06 Techniques of Integration.md  Chapter 07 Differential Equations.md  Chapter 07 Techniques of Integration.md  Chapter 08 Parametric Equations and Polar Coordinates.md  Chapter 09 Differential Equations.md  Chapter 09 Infinite Sequences and Series.md  Chapter 10 Vectors and the Geometry of Space.md  Chapter 11 Vector Functions.md  Chapter 12 Partial Derivatives.md  Chapter 13 Multiple Integrals.md  Chapter 14 Vector Calculus.md  Chapter 15 Second-Order Differential Equations.md
main/md_vectorstore/: index.faiss  index.pkl
test/dongjae/: .gitignore
test/dongjae/개발/: new이론설명agent.ipynb  교제로정적md파일만들기.py  이론설명agent.ipynb
test/dongjae/개발/chapters_md/: 01_ConCept_CheCk_answers__continued_.md  01_Review_69.md  02_ConCept_CheCk_answers__continued_.md  02_Review_165.md  02_Review_167.md  03_ConCept_CheCk_answers__continued_.md  03_Review_267.md  03_Review_269.md  05_Review_421.md  05_Review_423.md  06_Review_467.md  07_ConCept_CheCk_answers.md  07_Review_537.md  07_Review_539.md  08_Review_581.md  09_Review_635.md  (+20 more)
test/dongjae/송민씨코드/: math_chunker.py  pyproject.toml  search.py
test/dongjae/송민씨코드/output/chunks/: all_chunks.json
test/dongjae/송민씨코드/output/embeddings/: embeddings.json
test/songmin/: .dockerignore  README.md  __init__.py  config.py  main.py  main3.py  requirements.txt
test/songmin/agents/: __init__.py  external_search.py  new_search.py  problem_generation.py  problem_solving.py  quality_evaluation.py  task_manager.py
test/songmin/data/: topics.json
test/songmin/graph/: __init__.py  workflow.py
test/songmin/utils/: __init__.py  logger.py
test/wooseok/: ema_llm_test.ipynb  main.py  question_generator.py  requirements.txt  set_env.py
