[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calculus-embedder"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A system for chunking and embedding calculus textbooks using Gemini Text Embedding"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pdfplumber>=0.7.5",
    # Replace langchain with individual components to avoid conflicts
    "google-generativeai>=0.3.0",
    "numpy>=1.20.0",
    "tqdm>=4.64.0",
    "python-dotenv>=0.19.0",
    "pandas>=1.3.0,<2.3.0",  # More specific version
    "packaging<24.0",  # Specify version that works with poetry
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.3.0",
    "isort>=5.10.0",
    "mypy>=0.942",
]

[project.scripts]
embed-textbook = "scripts.embed_textbook:main"

[tool.setuptools]
packages = ["calculus_embedder"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88